# ccdoubles

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
doc/: ccdoubles.texi  macros.texi
meta/scripts/: ccdoubles.pc.in
meta/slackware/: slack-desc.in
scheme/: Makefile  ccdoubles.sls  process.sps  table.scm  test-vicare.sps
scheme/ccdoubles/: compat.guile.sls  compat.mosh.sls  compat.mzscheme.sls  compat.sagittarius.sls  compat.vicare.sls  main.sls  syntax-helpers.sls
src/: ccdoubles-cplx-matrices.c  ccdoubles-cplx-scalars.c  ccdoubles-cplx-vectors.c  ccdoubles-int-matrices.c  ccdoubles-int-vectors.c  ccdoubles-internals.h  ccdoubles-real-matrices.c  ccdoubles-real-vectors.c  ccdoubles-version.c  ccdoubles.h
tests/: integers.c  matrices.c  printing.c  vectors.c  version.c
